fix to overlapping stickies

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -85,11 +85,15 @@ nav {
   width: 100%;
   margin: 0 !important;
   padding: 10px $section-horz-space !important;
+  pointer-events: none;
 
   font-family: $inconsolata;
   text-transform: uppercase;
-  &::before {
-    content: '> ';
+  > span {
+    pointer-events: auto;
+    &::before {
+      content: '> ';
+    }
   }
 
   @media screen and (min-width: $larger-breakpoint) {
